--- a/Week-1/HTML_Basics.html
+++ b/Week-1/HTML_Basics.html
@@ -4,6 +4,8 @@
     <title>HTML_Basics</title>
   </head>
   <body>
+    <!--Comment Out 1-->
+    //Comment Out 2
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
