HTML_Basics Page Updated

--- a/Week-1/HTML_Basics.html
+++ b/Week-1/HTML_Basics.html
@@ -4,11 +4,25 @@
     <title>HTML_Basics</title>
   </head>
   <body>
-    <!--Comment Out 1-->
-    //Comment Out 2
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Paragraph</p>
+    <!-- Personal Info -->
+    <h1>Personal Info</h1>
+    <section style="display: flex; justify-content: space-between; align-items: start;">
+      <img src="https://media.licdn.com/dms/image/v2/D5603AQH_ZI3_JEi-WA/profile-displayphoto-shrink_800_800/B56ZPldpjpGsAk-/0/1734721575911?e=1746662400&v=beta&t=9k0iYvN66nkNg9vsUBM9-bNax-f5TcGh1qOidRz6T7k" style="border-radius: 100%; aspect-ratio: 1/1;" width="200" />
+      <div style="flex: 1; padding: 2rem;">
+        <p>Name: <b>Varun kangotra</b></p>
+        <p>Skill: <b>Web Development</b></p>
+        <p>Hobby: <b>Instrument Playing</b></p>
+        <p>Mob: <b>+91 9257307752</b></p>
+      </div>
+    </section>
+    <hr>
+
+    <!-- Social Profile -->
+    <h1>Social Profile</h1>
+    <section style="display: flex; align-items: center; gap: 1rem;">      
+      <a href="mailto:varunkangotra.it25@gmail.com">Email</a>
+      <a href="https://www.linkedin.com/in/varun-it25">LinkedIn</a>
+      <a href="https://www.instagram.com/varun.jecrc">Instagram</a>
+    </section>
   </body>
 </html>
