--- a/Week-4/Assignment(Quiz_Website)/home.html
+++ b/Week-4/Assignment(Quiz_Website)/home.html
@@ -26,7 +26,7 @@
 
             <div class="flex space-x-3">
                 <button class="border border-zinc-600 font-medium px-4 py-1 rounded cursor-pointer">Learn More</button>
-                <a href="/Week-4/Assignment(Quiz_Website)/app.html"><button class="bg-white text-black px-4 py-1 rounded font-medium cursor-pointer">Start</button></a>
+                <a href="/app.html"><button class="bg-white text-black px-4 py-1 rounded font-medium cursor-pointer">Start</button></a>
             </div>
         </div>
 
