--- a/Week-4/Assignment(Quiz_Website)/home.html
+++ b/Week-4/Assignment(Quiz_Website)/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizyfy</title>
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/226/226904.png">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
 </head>
